--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,21 @@ clap = { version = "4.2.4", features = ["derive"] }
 serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.96"
 
+# Networking and HTTP
+reqwest = { version = "0.11.20", features = ["json", "stream", "blocking"] }
+url = "2.4.0"
+futures = "0.3.28"
+
+# Arti (Tor) integration
+arti-client = { version = "0.9.0", features = ["full"] }
+tor-rtcompat = { version = "0.9.0", features = ["tokio"] }
+
+# Cryptographic primitives for secure object signing
+ed25519-dalek = "1.0.1"
+rand = "0.7.3"
+base64 = "0.21.0"
+
 [dev-dependencies]
 rstest = "0.17.0"
 assert_fs = "1.0.13"
+tokio-test = "0.4.2"
