--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,6 +71,8 @@ home = "0.5.4"                     # For resolving home directory
 rstest = "0.17.0"
 assert_fs = "1.0.13"
 tokio-test = "0.4.2"
+assert_cmd = "2.0" # For running the binary as a command
+predicates = "3.0" # For assertions on command output/status
 
 [patch.crates-io]
 gix-url = { path = "/workspaces/codespaces-blank/patched-deps/gix-url" }
